Fix stretched images in gallery view

--- a/app/components/Gallery/Gallery.css
+++ b/app/components/Gallery/Gallery.css
@@ -21,6 +21,7 @@
 
 .image {
   flex-grow: 1;
+  object-fit: cover;
 }
 
 .overlay {
